--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="button_label_scanartarget">Scan AR Target</string>
+    <string name="button_label_user">User</string>
+    <string name="button_label_dev_tools">Developer Tools</string>
 </resources>
