IAR-4886 Added target AR activity and an overlay fragment.

--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="button_label_scanartarget">Scan AR Target</string>
     <string name="button_label_user">User</string>
     <string name="button_label_dev_tools">Developer Tools</string>
+    <string name="label_target_ar_view">Target AR View</string>
 </resources>
