--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="button_label_user">User</string>
     <string name="button_label_dev_tools">Developer Tools</string>
     <string name="label_target_ar_view">Target AR View</string>
+    <string name="button_label_screenshot">Screen Shot</string>
+    <string name="button_label_record_video">Record Video</string>
 </resources>
