--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="ok">OK</string>
     <string name="enter_external_unserId">Enter external userId:</string>
     <string name="migrate_message">Would like to migrate the userId to new userId:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
