--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="huntmarker_data">Hunt Marker Data</string>
     <string name="reward">Reward</string>
     <string name="huntreward_data">Hunt Reward Data</string>
+    <string name="marker_name">Marker Name</string>
+    <string name="marker_image">Marker Image</string>
+    <string name="marker_data">Marker Data</string>
 
 
 </resources>
