IAR-5203 Show instructions when user rewards is empty

--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="marker_name">Marker Name</string>
     <string name="marker_image">Marker Image</string>
     <string name="marker_data">Marker Data</string>
+    <string name="reward_instruction">You will get reward after engaging AR experience.</string>
+    <string name="get_user_reward_by_id">Get User Reward by ID</string>
 
 
 </resources>
