IAR-4918 Added on demand list view. Migrated some utils functions in core to common module. Updated app name for target and surface.

--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">core-sample</string>
+    <string name="app_name">Core Sample</string>
     <string name="button_label_user_management">User Management</string>
     <string name="button_label_user_rewards">User Rewards</string>
     <string name="button_label_arhunts">ARHunts</string>
