--- a/surface-ar-sample/src/main/res/values/strings.xml
+++ b/surface-ar-sample/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">IAR SDK Samples</string>
+    <string name="app_name">Surface AR Sample</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
@@ -14,4 +14,5 @@
     <string name="button_label_ondemand">On Demand Markers</string>
     <string name="button_label_nfcwrite">NFC - Write</string>
     <string name="button_label_nfcread">NFC - Read</string>
+    <string name="text_label_download_asset">Downloading asset...</string>
 </resources>
