--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">IAR SDK Samples</string>
+    <string name="app_name">Target AR Sample</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
