--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="marker_data">Marker Data</string>
     <string name="reward_instruction">You will get reward after engaging AR experience.</string>
     <string name="get_user_reward_by_id">Get User Reward by ID</string>
+    <string name="get_location_markers">Get Location Markers</string>
+    <string name="nearby">Nearby</string>
+    <string name="take_me_there">Take me there</string>
 
 
 </resources>
