--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="enter_external_unserId">Enter external userId:</string>
-    <string name="migrate_message">Would like to migrate the userId to new userId:</string>
+    <string name="migrate_message">After id regeneration, the data of current userId will be lost. If you would like to migrate data, click MIGRATE, otherwise click OK.</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="clue_card">Clue Card</string>
