--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="marker_data">Marker Data</string>
     <string name="reward_instruction">You will get reward after engaging AR experience.</string>
     <string name="get_user_reward_by_id">Get User Reward by ID</string>
+    <string name="get_marker_by_id">Get Marker by ID</string>
 
 
 </resources>
