--- a/surface-ar-sample/src/main/res/values/strings.xml
+++ b/surface-ar-sample/src/main/res/values/strings.xml
@@ -28,6 +28,15 @@
     <string name="ok">OK</string>
     <string name="app_logo">App Logo</string>
     <string name="iar_surface_sdk">IAR Surface SDK</string>
-
+    <string name="account_settings">Account Settings</string>
+    <string name="external_userid">External UserID:</string>
+    <string name="create_user">Create User</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <string name="migrate_user">Migrate User</string>
+    <string name="create_new_user">Create New User</string>
+    <string name="login_user">Login User</string>
+    <string name="migrate_message">After id regeneration, the data of current userId will be lost. If you would like to migrate data, click MIGRATE, otherwise click OK.</string>
+    <string name="enter_external_unserId">Enter external userId:</string>
 
 </resources>
