--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="dialog_title_user">Current User</string>
     <string name="button_ok">OK</string>
     <string name="app_logo">App Logo</string>
-    <string name="iar_target_sdk">IAR Target SDK</string>
+    <string name="iar_target_sdk">Target SDK</string>
 </resources>
