IAR-5337 Add current coordinates and ‘take me there’ button for location markers

--- a/surface-ar-sample/src/main/res/values/strings.xml
+++ b/surface-ar-sample/src/main/res/values/strings.xml
@@ -29,5 +29,8 @@
     <string name="app_logo">App Logo</string>
     <string name="iar_surface_sdk">IAR Surface SDK</string>
 
+    <string name="nearby">Nearby</string>
+    <string name="take_me_there">Take me there</string>
+
 
 </resources>
