--- a/surface-ar-sample/src/main/res/values/strings.xml
+++ b/surface-ar-sample/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
 
     <string name="nearby">Nearby</string>
     <string name="take_me_there">Take me there</string>
+    <string name="get_marker_by_id">Get Marker by ID</string>
 
 
 </resources>
