IAR-5168 Change the “Account setting” to “User Management”

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="enable_simulated_location">Simulated Location</string>
 
     <string name="apply">Apply</string>
+    <string name="user_management">User Management</string>
 
 </resources>
