--- a/surface-ar-sample/src/main/res/values/strings.xml
+++ b/surface-ar-sample/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="write_marker_id">Write marker Id</string>
     <string name="write_tag_to_nfc_device">Write Tag to NFC Device</string>
     <string name="randomize_id">Randomize ID</string>
+    <string name="pick_id">Pick an On-Demand Marker</string>
     <string name="read_nfc_tag">Read NFC Tag</string>
     <string name="view_scanned_marker">View the Scanned Marker</string>
     <string name="text_label_download_asset">Downloading asset…</string>
