--- a/surface-ar-sample/src/main/res/values/strings.xml
+++ b/surface-ar-sample/src/main/res/values/strings.xml
@@ -47,6 +47,6 @@
     <string name="take_me_there">Take me there</string>
     <string name="get_marker_by_id">Get Marker by ID</string>
     <string name="get_location_markers">Get Location Markers</string>
-
+    <string name="nfc_upsupport">NFC is not supported on this device.</string>
 
 </resources>
