--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="button_ok">OK</string>
     <string name="app_logo">App Logo</string>
     <string name="iar_target_sdk">Target SDK</string>
+    <string name="no_video_file">No file saved, video Uri is null</string>
+    <string name="no_screenshot_file">No screenshot saved, Uri is null</string>
 </resources>
