IAR-5749 Move PrreviewVideoActivity and layout to common module

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@
 
     <string name="apply">Apply</string>
     <string name="user_management">User Management</string>
+    <string name="share_and_save">Share and Save</string>
 
 </resources>
