--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="iar_target_sdk">Target SDK</string>
     <string name="no_video_file">No file saved, video Uri is null</string>
     <string name="no_screenshot_file">No screenshot saved, Uri is null</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
