--- a/core-sample/src/main/res/values/strings.xml
+++ b/core-sample/src/main/res/values/strings.xml
@@ -38,4 +38,31 @@
     <string name="get_ar_hunt_by_id">Get AR Hunt by ID</string>
     <string name="marker_details">Marker Details</string>
 
+    <string name="start_date">Start Date:</string>
+    <string name="end_date">End Date:</string>
+    <string name="retroactive_contribution">Retroactive Contribution:</string>
+    <string name="get_ar_hunt">Get AR Hunt</string>
+    <string name="enter_hunt_id">Enter hunt ID</string>
+    <string name="no_hunt_id">Don\'t have the hunt Id</string>
+    <string name="id">ID:</string>
+    <string name="hunt_id">Hunt Id:</string>
+    <string name="type">Type:</string>
+    <string name="default_location">Coordinates: 48.166667,-100.166667 Radius: 10000</string>
+    <string name="coordinates">Coordinates:</string>
+    <string name="radius">Radius: 10000</string>
+    <string name="there_is_error">There is error</string>
+    <string name="location_hint">48.166667, -100.166667</string>
+    <string name="enter_location_coordinates">Enter location coordinates</string>
+    <string name="distance">Distance:</string>
+    <string name="enter_marker_id">Enter Marker ID:</string>
+    <string name="reward_name">Reward Name:</string>
+    <string name="reward_id">Reward Id:</string>
+    <string name="action_button_enabled">ActionButtonEnabled:</string>
+    <string name="action_button_text">ActionButtonText:</string>
+    <string name="action_button_url">ActionButtonUrl:</string>
+    <string name="reward_reason">Reward Reason:</string>
+    <string name="get_user_reward">Get User Reward</string>
+    <string name="enter_reward_id">Enter reward ID</string>
+    <string name="no_reward_id">Don\'t have this reward id</string>
+
 </resources>
