--- a/target-ar-sample/src/main/res/values/strings.xml
+++ b/target-ar-sample/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="no_video_file">No file saved, video Uri is null</string>
     <string name="no_screenshot_file">No screenshot saved, Uri is null</string>
     <string name="no_internet_connection">No internet connection</string>
+    <string name="permissions_requested">All permissions requested are necessary for the app to run properly.</string>
+    <string name="user_id">User ID:</string>
+    <string name="instruction">Point your camera at an AR target to begin</string>
+    <string name="no_network_connection">No network connection detected.</string>
+
 </resources>
